--- a/src/package.xml
+++ b/src/package.xml
@@ -8,6 +8,7 @@
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="manuel@todo.todo">manuel</maintainer>
+  <maintainer email="jing@todo.todo">jing</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
